<resources>
    <string name="app_name">IntegrasiActivity</string>

    <string name="login_title">Welcome Back!</string>
    <string name="login_desc">Ayo kembali produktif dan jadilah yang terbaik!</string>

    <string name="register_title">Welcome to IA!</string>
    <string name="register_desc">Ayo bergabung bersama kami dan jadilah yang terbaik!</string>

    <string name="dialog_reset_password_desc">Masukkan email Anda untuk menerima link reset password</string>

    <string name="edittext_hint_email"><font size="13">Email</font></string>
    <string name="edittext_hint_password"><font size="13">Password</font></string>
    <string name="edittext_hint_fullname"><font size="13">Full Name</font></string>
    <string name="edittext_hint_phone"><font size="13">Phone Number</font></string>
    <string name="edittext_hint_gender"><font size="13">Gender</font></string>
    <string name="edittext_hint_birthday"><font size="13">Tanggal Lahir</font></string>

    <string name="tv_already_have_account">Sudah memiliki akun?</string>
    <string name="tv_login">Masuk</string>

    <string name="tv_dont_have_an_account">Belum memiliki akun?</string>
    <string name="register">Daftar</string>

    <string name="tv_not_available">N/A</string>
    <string name="tv_status">Student</string>

    <!-- Array untuk spinner gender -->
    <string-array name="gender_array">
        <item>Laki-laki</item>
        <item>Perempuan</item>
    </string-array>

</resources>