<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_dark"
    android:scrollbars="none"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/bg_dark" >

        <ImageView
            android:id="@+id/imgLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:src="@drawable/img_login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="48dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/login_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:textColor="@color/white_60"
            android:text="@string/login_desc" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:padding="16dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/edittext_hint_email"
            android:drawableLeft="@drawable/baseline_email_24"
            android:drawablePadding="16dp"
            android:textColorHint="@color/white_60"
            android:inputType="textEmailAddress"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:layout_marginHorizontal="16dp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/edittext_hint_password"
            android:drawableLeft="@drawable/baseline_lock_24"
            android:drawablePadding="16dp"
            android:drawableRight="@drawable/baseline_remove_red_eye_24"
            android:textColorHint="@color/white_60"
            android:inputType="textPassword"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:layout_marginHorizontal="16dp" />

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/white_60"
            android:textSize="14sp"
            android:text="Lupa password?"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="16dp"
            android:text="Login"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/white"
            app:backgroundTint="@null"
            android:background="@drawable/bg_btn_primary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal" >

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white_60"
                android:textSize="14sp"
                android:text="@string/tv_dont_have_an_account" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textColor="@color/white_60"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/register" />
        </LinearLayout>

<!--        <ProgressBar-->
<!--            android:id="@+id/progress_bar"-->
<!--            android:layout_width="32dp"-->
<!--            android:layout_height="32dp"-->
<!--            android:layout_gravity="center_horizontal"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:visibility="invisible" />-->
    </LinearLayout>

</ScrollView>